stab for R: 
data analysis of drug stability for shelf life estimation

Update log
---
~ 12/10/2013 (0.1.8)
---
   - fixed output file as automatically selected from input file name;
     and will check it the output files exists or not; it will not
     overwrite the existing file and rename the output automatically
     with "xxx_01.txt" or "xxx_01.pdf" if necessary.
   - also added the exported raw dataset as .csv format; original was 
     .RData only.
   - fixed %CI of user's defined;
   - fixed .csv dataset loading problem with single batch study;
   - fixed some output formats;
   - fixed model #3 output plots.
   - fixed demo module (no pdf output; but display plots on screen);
   - added stab_setup() for stab setup file; like bear...

~ 11/29/2013 (0.1.7)
---
   - set CI as option (default is 95%);
   - used data editor to set up parameters now as bear;
   - fixed pdf output incompletedly closed after running a project;
   - fixed abnormal crashed when no solution can be found;
   - fixed the repeated batch # for model #3.
   - fixed some typo...

~ 09/24/2013 (v0.1.6)
---
   - added 'tests' subdir and test_run() for test;
   - corrected some typo with spelling check;
   - switch 'windows(record=TRUE)' to 'dev.new()' for linux/unix-like OS;

~ 04/11/2013 (v0.1.5)
---
  - switched from solving a quadratic eq. for shelf-life
    to graphic method (95% CI);
  
  - thus we fixed inconsistent results between calculated
    shelf-life and the list of 95% CI for multiple batches;
  
  - outputs have been directed to a .txt and .pdf files;
    .txt is for statistical results, and .pdf is for
    graphic output.
    
  - the demo still keeps as it was; i.e., using the method
    of solving quadratic eq. for historical reasons.
   
  - add the examples from the textbook, as well as to 
    validate stab for R.
    
  - since stab v0.1.4 was just released on March 7, 2013,
    we have to wait for two more months before next release.